--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>프로젝트 이름</title>
+  <!-- 카카오맵 SDK(맵API - 근무지) -->
+  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=88096e3ebf25301649431f15646e9706"></script>
 </head>
 
 <body>
