--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-  
-  <head>
+
+<head>
   <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>프로젝트 이름</title>
+  <title>DEVjOBS</title>
   <!-- 카카오맵 SDK(맵API - 근무지) -->
   <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=88096e3ebf25301649431f15646e9706"></script>
 </head>
